# lulc-utility

./: .dockerignore  .env_template  .gitignore  .gitlab-ci.yml  .pre-commit-config-optional-linting.yaml  .pre-commit-config.yaml  .pylintrc  .ruff.toml  CHANGELOG.md  Dockerfile  README.md  environment.yaml  environment_cpu.yaml  environment_deploy.yaml  pyproject.toml
.gitlab/issue_templates/: Default.md
app/: api.py  logger.py  predict.py  process.py  stats.py
app/route/: common.py  health.py  segment.py  uncertainty.py
conf/: area_descriptor.yaml  area_descriptor_example.yaml  config.yaml
conf/data/: baseline.yaml  baseline_v2.yaml  baseline_v3.yaml  central_europe_v1.yaml  d12_regk_v2.yaml  d12_v1.yaml  d12_v2.yaml  de_v1.yaml  ded21_v1.yaml
conf/imagery/: file_dir.yaml  google_earth_engine.yaml  minio.yaml  sentinel_hub.yaml
conf/logging/app/: logging.yaml
conf/model/: baseline.yaml  soil_sealing_v1.yaml  v1.yaml
conf/serve/: local.yaml
data/: regierungsbezirk_karlsruhe.geojson
data/area/: area_DE.csv  area_DE12.csv  area_c984858b-38d8-46ab-af18-e039b5f342fb.csv  area_v1.csv
data/example/0a2bf817b6a8f4091a91d02418833e5d/: request.json
data/imagery/: imagery_corine_v1.js  imagery_v1.js  imagery_v2.js
data/label/: corine.yaml  label_soil_sealing_v1.yaml  label_v1.csv  label_v1.yaml  label_v2.csv  label_v2.yaml  label_v3.yaml
example/data/0a2bf817b6a8f4091a91d02418833e5d/: request.json
lulc/: calculate_dataset_statistics.py  compute_area_descriptor.py  export_osm_labels.py  save_imagery.py  train.py
lulc/data/: augment.py  collate.py  color.py  dataset.py  grid.py  label.py  module.py  sampling.py  stats.py  tx.py
lulc/data/tx/: array.py  tensor.py
lulc/model/: metrics.py  model.py  registry.py
lulc/model/ops/: download.py  registry.py
lulc/monitoring/: energy.py
lulc/ops/: exception.py  imagery_store_operator.py  osm_operator.py  sentinelhub_operator.py
test/app/: test_api.py  test_process.py  test_stats.py
test/data/: test_augment.py  test_grid.py  test_sampling.py  test_stats.py  test_tx.py  tx_test.py
test/data/tx/: test_array.py  test_tensor.py
test/model/: test_metrics.py  test_model.py
test/ops/: osm_operator_test.py  test_osm_operator.py
