[project]
name = "lulc-utility"
version = "1.1.1"
description = "This utility provides various LULC classifications"
authors = [
    {name = "Maciej Adamiak", email = "maciej.adamiak@heigit.org"},
    {name = "Moritz Schott", email = "moritz.schott@heigit.org"},
    {name = "Danielle Gatland", email = "danielle.gatland@heigit.org"}
]
readme = "README.md"
repository = "https://gitlab.heigit.org/climate-action/utilities/lulc-utility.git"
requires-python = ">=3.13"
dependencies = [
    "cachetools>=6.1.0",
    "fastapi>=0.116.1",
    "geocube>=0.7.1",
    "httpx>=0.28.1",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.3",
    "neptune>=1.14.0",
    "numpy>=2.3.1",
    "ohsome>=0.4.0",
    "omegaconf>=2.3.0",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.1",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "rasterio>=1.4.3",
    "scipy>=1.16.0",
    "sentinelhub>=3.11.1",
    "setuptools>=80.9.0",
    "tifffile>=2025.6.11",
    "tqdm>=4.67.1",
    "urllib3>=2.5.0",
    "uvicorn>=0.35.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
markers = [
    "external: marks tests that potentially make external API calls (deselect with '-m \"not external\"')",
]

[tool.uv.build-backend]
module-root = ""
module-name = "app"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"