[project]
name = "lulc-utility"
version = "1.1.1"
description = "This utility provides various LULC classifications"
authors = [
    {name = "Maciej Adamiak", email = "maciej.adamiak@heigit.org"},
    {name = "Moritz Schott", email = "moritz.schott@heigit.org"},
    {name = "Danielle Gatland", email = "danielle.gatland@heigit.org"}
]
readme = "README.md"
repository = "https://gitlab.heigit.org/climate-action/utilities/lulc-utility.git"
requires-python = ">=3.11,<3.12"
dependencies = [
    "geocube==0.4.2",
    "geopandas==0.14.3",
    "hydra-core==1.3.2",
    "matplotlib==3.7.3",
    "minio==7.2.16",
    "neptune==1.10.4",
    "numpy==1.25.0",
    "ohsome==0.3.2",
    "omegaconf==2.3.0",
    "pandas==2.2.2",
    "pillow==9.4.0",
    "pyarrow>=21.0.0",
    "pydantic==2.6.2",
    "pyproj==3.5.0",
    "pyyaml==6.0.2",
    "rasterio==1.3.8",
    "sentinelhub==3.9.1",
    "setuptools<80.9", # temporary to avoid deprecation warning due to lightning
    "shapely==2.0.1",
]

[dependency-groups]
dev = [
    "albumentations==1.3.1",
    "contextily==1.3.0",
    "coolname==2.2.0",
    "geopy==2.4.1",
    "lightning==2.1.4",
    "onnx==1.14.0",
    "pre-commit==3.6.0",
    "pyjoules==0.5.1",
    "scikit-learn==1.3.0",
    "seaborn==0.12.2",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "transformers==4.30.2",
    "tqdm==4.65.0",
]
test = [
    "httpx==0.24.1",
    "pytest==7.4.2",
]
deploy = [
    "fastapi==0.100.0",
    "onnxruntime==1.15.1",
    "scipy==1.11.1",
    "starlette==0.27.0",
    "uvicorn==0.22.0",
    "webcolors==24.11.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
markers = [
    "external: marks tests that potentially make external API calls (deselect with '-m \"not external\"')",
]

[tool.uv.build-backend]
module-root = ""
module-name = "app"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
